# googlesat

./: .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  python-package.yml
docs/: README.md  conf.py  googlesat.rst  index.rst  installation.rst  modules.rst  quickstart.rst  requirements-docs.txt
examples/: examples.py
googlesat/: download.py  download_s2_images.py  downloader.py  sentinel.py  utils.py
tests/: download.py  get_data.py  test.py  test_1.csv  test_2.csv  test_3.csv  test_4.csv  test_geometry_from_file.py  test_get_metadata.py  test_query.py
tests/data/: test.geojson  test_1.csv
