[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "googlesat"
version = "0.0.1a1"
description = "Download Sentinel 2 data from GCP"
readme = {file = "README.md", content-type='text/markdown'}
license = {text = "MIT"}
authors = [{name = "Alekos Falagas", email = "alek.falagas@gmail.com"},]
maintainers = [{name = "Alekos Falagas", email = "alek.falagas@gmail.com"}]

classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",]

requires-python = ">=3.9"
dependencies = [
    "platformdirs",
    "pandas",
    "geopandas",
    "rtree",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-napoleon",
    "sphinx_rtd_theme",
    "myst_parser",
    "sphinxemoji"
]

dev = [
    "pytest",
    "pytest-cov",
    "pytest-dependency",
    "pytest-lazy-fixture",
    "pytest-mock",
]